moje pierwsze zmiany

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-    <title>Programuj dziewczyno</title>
+    <title>Warsztaty</title>
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta charset="utf-8">
     <link rel="icon" href="images/favicon.png" type="image/x-icon">
@@ -23,6 +23,7 @@
                   <li><a href="https://www.codecademy.com/" target="_blank">Codecademy</a></li>
                   <li><a href="https://www.freecodecamp.org/" target="_blank">FreeCodeCamp</a></li>
                   <li><a href="https://codecombat.com/"target="_blank">CodeCombat</a></li>
+                  <li><a href="https://www.codewars.com/">CodeWars</a></li>
                 </ul>
               </div>
             </li>
@@ -34,7 +35,7 @@
         </div>
       </nav>
     </header>
-    <div class="jumbotron">
+    <div class="jumbotron"> <!-- klasa bootstrapa - jest to framework, nie znajac cssa mozna oscylowac strone-->
       <div class="container">
         <h2 class="main-slogan">Gotowa na naukę programowania?</h2>
         <p>
